# SeaFog

./: .gitignore  img_comb.py  main.cpp  nohup.out  parameters.csv  requirements.txt  test.cpp  test.py  test.xlsx
NightPros/: README.md  config.py  file_operation.py  pred.py
NightPros/hisd2png/: CMakeLists.txt
NightPros/hisd2png/include/: hisd.h
NightSLTD/: README.md  config.py  file_operation.py  main.py  tbb_file.py
NightSLTD/hisd2png/src/: hisd_pixlin2lonlat.cpp  hisd_read.cpp  main.cpp
OUCseafog/: config.py  gen_dataset.py  stastic.py  static.py
OUCseafog/util/: him.py
STTDataPros/: README.md  config.py  files.py  genImg.py  prosData.py
calipso/: anal_calipso.py  anal_him_vfm.py  calipso_file.py  cfg.py  data_process.py  file_data_cnt.py  file_filter.py  gen_dataset_him.py  gen_dataset_vfm.py  plot_path.py  plot_vfm.py  validate_file.py  vfm.py  visiualize_calipso.py  说明.md
calipso/vfm_util/: get_vfm.py
imgCombine/: img_comb.py
seafog_svm/: 18parameters.csv  anal_error.py  config.py  data_pros.py  data_visiualization.py  dataset.py  error_anal.py  plot_learning_curve.py  predic.py  test_svm.py  train.py  train_anal.py  train_svm.py  train_xgboost.py
seafog_svm/model/: seafog_sea_n_41.0_117.5_34.0_127.0.pkl
seafog_svm/model/tmp/: parameters.csv  parameters2018.csv  seafog_sea_land_d_41.0_117.5_34.0_127.0.pkl
seafog_svm/output/: error.xlsx
seafog_svm/utils/: anal_error.py  get_params.py
